syntax="proto3";
package ss;

import "chat.proto";

message UserBasic {
  string account_name = 1; //account name 
  string name = 20; //role name
  int64 uid = 21;
  string addr = 22;
  bool sex = 23; //true:male false:female
  int32 age = 24;
  int32 level = 25;
  string head_url = 26;
}

//blob to db
message UserBlob {
  int32 exp = 20;
  int64 last_login_ts = 21;
  int64 last_logout_ts = 22;
  //UserDepot depot = 23;
  UserChatInfo chat_info = 23;
  string user_desc = 24;
  int64 reg_time = 25;
  string client_enc_des_key = 26; //enc client data des key
}


message UserInfo {
  UserBasic basic_info=20;
  UserBlob blob_info=21;
}

message UserProfile {
  int64 uid = 1;
  string name = 2; //role name
  string addr = 3;
  int32 sex = 4; //1:male 2:female
  int32 level = 5;
  string head_url = 6;
  string user_desc = 7;
}
